--- a/application.yaml
+++ b/application.yaml
@@ -1,6 +1,11 @@
+ead:
+  serviceRegistry:
+    username: serviceregistry
+    password: 'ead123sr'
+
 eureka:
   client:
     serviceUrl:
-      default-zone: 'http://localhost:8761/eureka'
+      default-zone: 'https://${ead.serviceRegistry.username}:${ead.serviceRegistry.password}@localhost:8761/eureka'
   instance:
     hostname: localhost
