--- a/application.yaml
+++ b/application.yaml
@@ -6,6 +6,6 @@ ead:
 eureka:
   client:
     serviceUrl:
-      defaultZone: 'https://${ead.serviceRegistry.username}:${ead.serviceRegistry.password}@localhost:8761/eureka'
+      defaultZone: 'http://${ead.serviceRegistry.username}:${ead.serviceRegistry.password}@localhost:8761/eureka'
   instance:
     hostname: localhost
